<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ReportSource">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_gray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AV_VIEW"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/CHANNEL_TEST_PIC_AV" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <TextView
                android:id="@+id/HMDI1_VIEW"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/CHANNEL_TEST_PIC_HDMI1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <TextView
                android:id="@+id/HDMI2_VIEW"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/CHANNEL_TEST_PIC_HDMI2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <TextView
                android:id="@+id/HDMI3_VIEW"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:text="@string/CHANNEL_TEST_PIC_HDMI3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <TextView
                android:id="@+id/HDMI4_VIEW"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:text="@string/CHANNEL_TEST_PIC_HMDI4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView24"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView25"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <TextView
                android:id="@+id/VOD_VIEW"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:text="@string/CHANNEL_TEST_PIC_VOD" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView26"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView27"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView28"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView29"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView30"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="10dp"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
